update model schemas
